<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bufunfa</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="home_header_text">Dinheiro até o último dia do mês</string>
    <string name="home_email_hint">E-mail</string>
    <string name="home_password_hint">Senha</string>
    <string name="home_login_button_text">Entrar</string>
    <string name="home_newuser_link_text">Novo por aqui? Cadastre-se grátis!</string>
    <string name="title_activity_signup">Criar Conta</string>
    <string name="title_activity_login">Login</string>
    <string name="home_confirm_password_hint">Confirme senha</string>
    <string name="signup_button_submit_text">Criar Conta Gratuita</string>
    <string name="title_activity_account_system">Sistemas de Contas</string>

</resources>
