<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/light_yellow"
    tools:context=".SignupActivity" >

    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/ic_launcher"
        android:text="@string/home_header_text"
        android:layout_marginBottom="@dimen/header_bottom_margin"
        android:gravity="center_horizontal" />
    
    <EditText android:id="@+id/signup_login_input"
        android:inputType="textEmailAddress"
        android:hint="@string/home_email_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/input_vertical_margin"/>
    
    <EditText android:id="@+id/signup_pass_input"
        android:inputType="textPassword"
        android:hint="@string/home_password_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/input_vertical_margin"/>
    
    <EditText android:id="@+id/signup_confirm_pass_input"
        android:inputType="textPassword"
        android:hint="@string/home_confirm_password_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/input_vertical_margin"/>
    
    <Button android:id="@+id/signup_button"
        android:text="@string/signup_button_submit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/input_vertical_margin"
        android:background="@color/dark_green"
        android:textColor="@color/light_yellow"/>

</LinearLayout>
