<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/light_yellow"
    tools:context=".HomeActivity" >

    <TextView android:id="@+id/home_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/ic_launcher"
        android:text="@string/home_header_text"
        android:layout_marginBottom="@dimen/header_bottom_margin"
        android:gravity="center_horizontal"
        android:layout_alignParentTop="true" />
    
    <EditText android:id="@+id/home_login"
        android:inputType="textEmailAddress"
        android:hint="@string/home_email_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/input_vertical_margin"
        android:layout_below="@id/home_header"/>
    
    <EditText android:id="@+id/home_pass"
        android:inputType="textPassword"
        android:hint="@string/home_password_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/input_vertical_margin"
        android:layout_below="@id/home_login"/>
    
    <Button android:id="@+id/home_login_button"
        android:text="@string/home_login_button_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/input_vertical_margin"
        android:background="@color/dark_green"
        android:textColor="@color/light_yellow"
        android:layout_below="@id/home_pass"/>
    
    <TextView android:id="@+id/home_newuser_link"
        android:text="@string/home_newuser_link_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/input_vertical_margin"
        android:paddingBottom="@dimen/input_vertical_margin"
        android:textColor="@color/dark_green"
        android:gravity="center"
        android:layout_below="@id/home_login_button"/>

</RelativeLayout>
